# django_graphics

./: README.md  pyproject.toml
app/urls/: app.py  urls.py
app/views/: data.py
backend/: asgi.py  urls.py  wsgi.py
backend/settings/: base.py
templates/: base.html  index.html
