[tool.poetry]
name = "django_graphics"
version = "0.1.0"
description = "A project with django graphics presentation"
authors = ["Uadson Feitosa <uadsonpy@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
django-chartjs = "^2.3.0"
django-bootstrap4 = "^22.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
